main blogs section added

--- a/index.html
+++ b/index.html
@@ -18,15 +18,181 @@
                     <div class="header-titles">
                         <h1 class="header-hading">The Greatest Show On The Earth</h1>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum tempora placeat consectetur delectus! Odit quisquam incidunt doloremque eos neque alias nihil ducimus. Culpa, possimus quos?</p>
-                        <a href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/qatar2022"><button class="watch-btn">Watch Live  <i class="fa-regular fa-greater-than"></i></button></a>
+                        <a href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/qatar2022" target="_blank"><button class="watch-btn">Watch Live  <i class="fa-regular fa-greater-than"></i></button></a>
                     </div>
                     <div class="header-banner">
                         <img src="images/Banner Image.png" alt="">
                     </div>
                 </div>
         </header>
+        <!-- header ends here -->
         <main>
-            <section></section>
+            <section id="main-blogs">
+                <div class="all-cards">
+                    <div class="side-menu-card">
+                        <div class="menu-buttons">
+                            <a href=""><button class="match">Upcoming Match</button> </a>
+                            <a href=""><button class="group">All Group</button> </a>
+                            <a href=""><button class="blog">Blog</button> </a>
+                        </div>
+                    </div>
+                    <div class="blogs">
+                        <article>
+                            <div class="player-img">
+                                <img src="images/Blog Image.png" alt="">
+                            </div>
+                            <div class="blogs-info">
+                                <button>Transfer</button>
+                                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                                <div class="player-time">
+                                    <div class="time">
+                                        <i class="fa-regular fa-clock"></i> <span>10h</span>
+                                    </div>
+                                    <div class="sms">
+                                        <i class="fa-regular fa-comment-dots"></i> <span>23</span>
+                                    </div>
+                                </div>
+                             </div>
+                        </article>
+                        <article>
+                            <div class="player-img">
+                                <img src="images/Blog Image.png" alt="">
+                            </div>
+                            <div class="blogs-info">
+                                <button>Transfer</button>
+                                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                                <div class="player-time">
+                                    <div class="time">
+                                        <i class="fa-regular fa-clock"></i> <span>10h</span>
+                                    </div>
+                                    <div class="sms">
+                                        <i class="fa-regular fa-comment-dots"></i> <span>23</span>
+                                    </div>
+                                </div>
+                             </div>
+                        </article>
+                        <article>
+                            <div class="player-img">
+                                <img src="images/Blog Image.png" alt="">
+                            </div>
+                            <div class="blogs-info">
+                                <button>Transfer</button>
+                                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                                <div class="player-time">
+                                    <div class="time">
+                                        <i class="fa-regular fa-clock"></i> <span>10h</span>
+                                    </div>
+                                    <div class="sms">
+                                        <i class="fa-regular fa-comment-dots"></i> <span>23</span>
+                                    </div>
+                                </div>
+                             </div>
+                        </article>
+                        <article>
+                            <div class="player-img">
+                                <img src="images/Blog Image.png" alt="">
+                            </div>
+                            <div class="blogs-info">
+                                <button>Transfer</button>
+                                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                                <div class="player-time">
+                                    <div class="time">
+                                        <i class="fa-regular fa-clock"></i> <span>10h</span>
+                                    </div>
+                                    <div class="sms">
+                                        <i class="fa-regular fa-comment-dots"></i> <span>23</span>
+                                    </div>
+                                </div>
+                             </div>
+                        </article>
+                        <article>
+                            <div class="player-img">
+                                <img src="images/Blog Image.png" alt="">
+                            </div>
+                            <div class="blogs-info">
+                                <button>Transfer</button>
+                                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                                <div class="player-time">
+                                    <div class="time">
+                                        <i class="fa-regular fa-clock"></i> <span>10h</span>
+                                    </div>
+                                    <div class="sms">
+                                        <i class="fa-regular fa-comment-dots"></i> <span>23</span>
+                                    </div>
+                                </div>
+                             </div>
+                        </article>
+                        <article>
+                            <div class="player-img">
+                                <img src="images/Blog Image.png" alt="">
+                            </div>
+                            <div class="blogs-info">
+                                <button>Transfer</button>
+                                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                                <div class="player-time">
+                                    <div class="time">
+                                        <i class="fa-regular fa-clock"></i> <span>10h</span>
+                                    </div>
+                                    <div class="sms">
+                                        <i class="fa-regular fa-comment-dots"></i> <span>23</span>
+                                    </div>
+                                </div>
+                             </div>
+                        </article>
+                        <article>
+                            <div class="player-img">
+                                <img src="images/Blog Image.png" alt="">
+                            </div>
+                            <div class="blogs-info">
+                                <button>Transfer</button>
+                                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                                <div class="player-time">
+                                    <div class="time">
+                                        <i class="fa-regular fa-clock"></i> <span>10h</span>
+                                    </div>
+                                    <div class="sms">
+                                        <i class="fa-regular fa-comment-dots"></i> <span>23</span>
+                                    </div>
+                                </div>
+                             </div>
+                        </article>
+                        <article>
+                            <div class="player-img">
+                                <img src="images/Blog Image.png" alt="">
+                            </div>
+                            <div class="blogs-info">
+                                <button>Transfer</button>
+                                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                                <div class="player-time">
+                                    <div class="time">
+                                        <i class="fa-regular fa-clock"></i> <span>10h</span>
+                                    </div>
+                                    <div class="sms">
+                                        <i class="fa-regular fa-comment-dots"></i> <span>23</span>
+                                    </div>
+                                </div>
+                             </div>
+                        </article>
+                        <article>
+                            <div class="player-img">
+                                <img src="images/Blog Image.png" alt="">
+                            </div>
+                            <div class="blogs-info">
+                                <button>Transfer</button>
+                                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                                <div class="player-time">
+                                    <div class="time">
+                                        <i class="fa-regular fa-clock"></i> <span>10h</span>
+                                    </div>
+                                    <div class="sms">
+                                        <i class="fa-regular fa-comment-dots"></i> <span>23</span>
+                                    </div>
+                                </div>
+                             </div>
+                        </article>
+                    </div>
+                </div>
+            </section>
          </main>
 </body>
 </html>
