--- a/index.html
+++ b/index.html
@@ -195,4 +195,26 @@
             </section>
          </main>
 </body>
+<footer>
+    <div class="footer-goal">
+        <p>Goal</p> 
+    </div>
+     <hr> 
+    <div class="footer-links"> 
+        <a href="">Contact Us</a>
+        <a href="">Terms Of Service</a>
+        <a href="">Privacy Policy</a>
+        <a href="">Privacy Setting</a>
+        <a href="">Goal App</a>
+        <a href="">Goal Live</a>
+    </div>
+    <div class="footer-icons">
+        <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a href="http://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a href="http://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a href="http://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="http://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="http://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+    </div>
+</footer>
 </html>
