upcoming match added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/ae6d6ef927.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
         <header>
@@ -31,9 +32,9 @@
                 <div class="all-cards">
                     <div class="side-menu-card">
                         <div class="menu-buttons">
-                            <a href=""><button class="match">Upcoming Match</button> </a>
+                            <a href="upcoming-match.html"><button class="match">Upcoming Match</button> </a>
                             <a href=""><button class="group">All Group</button> </a>
-                            <a href=""><button class="blog">Blog</button> </a>
+                            <a href="index.html"><button class="blog">Blog</button> </a>
                         </div>
                     </div>
                     <div class="blogs">
@@ -212,9 +213,6 @@
         <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
         <a href="http://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
         <a href="http://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-        <a href="http://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-        <a href="http://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="http://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
     </div>
 </footer>
 </html>
