recreated the header

--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
 </head>
 <body>
         <header>
-                <div class="header-main">
-                    <div class="header-titles">
-                        <h1 class="header-hading">The Greatest Show On The Earth</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum tempora placeat consectetur delectus! Odit quisquam incidunt doloremque eos neque alias nihil ducimus. Culpa, possimus quos?</p>
-                        <a href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/qatar2022" target="_blank"><button class="watch-btn">Watch Live  <i class="fa-regular fa-greater-than"></i></button></a>
+                <div class="header-container">
+                    <div class="header-des">
+                        <div class="header-title">
+                            <h1>The Greatest Show ON The Earth</h1>
+                        </div>
+                        <div class="header-pera">
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply 
+                                random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                        </div>
+                        <div class="header-btn">
+                            <button>Watch Live <i class="fa-regular fa-greater-than"></i></button>
+                        </div>
                     </div>
                     <div class="header-banner">
                         <img src="images/Banner Image.png" alt="">
@@ -193,7 +200,10 @@
                         </article>
                     </div>
                 </div>
-            </section>
+             </section>
+             <div class="view-all">
+                <button>View All</button>
+            </div>
          </main>
 </body>
 <footer>
