mobile header added by midea query

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/ae6d6ef927.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    
-</head>
+ </head>
 <body>
         <header>
                 <div class="header-container">
@@ -21,8 +20,7 @@
                             <h1>The Greatest Show ON The Earth</h1>
                         </div>
                         <div class="header-pera">
-                            <p>Contrary to popular belief, Lorem Ipsum is not simply 
-                                random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                            <p>Contrary to popular belief, is not simply  random text.</p>
                         </div>
                         <div class="header-btn">
                             <button>Watch Live <i class="fa-regular fa-greater-than"></i></button>
