--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -8,11 +8,17 @@
 </head>
 <body>
     <header>
-        <div class="header-main">
-            <div class="header-titles">
-                <h1 class="header-hading">The Greatest Show On The Earth</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum tempora placeat consectetur delectus! Odit quisquam incidunt doloremque eos neque alias nihil ducimus. Culpa, possimus quos?</p>
-                <a href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/qatar2022" target="_blank"><button class="watch-btn">Watch Live  <i class="fa-regular fa-greater-than"></i></button></a>
+        <div class="header-container">
+            <div class="header-des">
+                <div class="header-title">
+                    <h1>The Greatest Show ON The Earth</h1>
+                </div>
+                <div class="header-pera">
+                    <p>Contrary to popular belief, is not simply  random text.</p>
+                </div>
+                <div class="header-btn">
+                    <button>Watch Live <i class="fa-regular fa-greater-than"></i></button>
+                </div>
             </div>
             <div class="header-banner">
                 <img src="images/Banner Image.png" alt="">
