mideum footer done

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 </div>
                              </div>
                         </article>
-                        <article>
+                        <article class="none">
                             <div class="player-img">
                                 <img src="images/Blog Image.png" alt="">
                             </div>
@@ -162,7 +162,7 @@
                                 </div>
                              </div>
                         </article>
-                        <article>
+                        <article class="none">
                             <div class="player-img">
                                 <img src="images/Blog Image.png" alt="">
                             </div>
@@ -179,7 +179,7 @@
                                 </div>
                              </div>
                         </article>
-                        <article>
+                        <article class="none">
                             <div class="player-img">
                                 <img src="images/Blog Image.png" alt="">
                             </div>
