--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <h1>The Greatest Show ON The Earth</h1>
                         </div>
                         <div class="header-pera">
-                            <p>Contrary to popular belief, is not simply  random text.</p>
+                            <p class="elips" title="Contrary to"> popular belief, is not simply  random text.</p>
                         </div>
                         <div class="header-btn">
                             <button>Watch Live <i class="fa-regular fa-greater-than"></i></button>
